[metadata]
name = Topsis-Aditya-102203497
version = 0.0.1
author = Raj
author_email = chatutvediaditya@gmail.com
description = A package to implement TOPSIS method
long_description = file: README.md
long_description_content_type = text/markdown
url =https://github.com/AdityaChaturvedi69732/Topsis_Aditya_102203497
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
